# fidgetpy

./: Cargo.toml  LICENSE.txt  README.md  pyproject.toml
fidgetpy/: __init__.py  _expr.py  color.py  expr.py  splat.py
fidgetpy/math/: DOCUMENTATION_STYLE_GUIDE.md  README.md  __init__.py  __init__improved.py  basic_math.py  basic_math_improved.py  color.py  domain_manipulation.py  interpolation.py  logical.py  old_domain_manipulation.py  old_interpolation.py  old_vector_math.py  shading.py  transformations.py  transformations_improved.py  trigonometry.py  vector_math.py
fidgetpy/ops/: DOCUMENTATION_STYLE_GUIDE.md  README.md  __init__.py  blending_ops.py  boolean_ops.py  domain_ops.py  misc_ops.py
fidgetpy/shape/: DOCUMENTATION_STYLE_GUIDE.md  README.md  __init__.py  curves.py  cylinders.py  primitives.py  rounded_shapes.py  specialized.py
src/: fp_context.rs  fp_eval.rs  fp_expr.rs  fp_mesh.rs  fp_stl.rs  fp_utils.rs  fp_var.rs  lib.rs
tests/: test_eval.py  test_expressions.py  test_ops.py  test_vm_frep.py  test_vm_io.py
tests/math/: test_basic_math.py  test_domain_manipulation.py  test_interpolation.py  test_logical.py  test_recursion.py  test_shading.py  test_transformations.py  test_trigonometric.py  test_vector_math.py
tests/misc/: __init__.py  test_bear_vm_frep.py  test_complex_expressions.py  test_container.py  test_creative_shapes.py  test_errors.py  test_eval.py  test_expressions.py  test_mesh.py  test_mesh_bounds.py  test_ops.py  test_variable_validation.py  test_vm_frep.py  test_vm_io.py
tests/ops/: test_blending_ops.py  test_boolean_ops.py  (+2 more)
(+8 files in other folders)
